--- a/.gitignore
+++ b/.gitignore
@@ -40,4 +40,13 @@ yarn-error.log*
 *.tsbuildinfo
 next-env.d.ts
 
+#ignore
+.env
+.env.local
+.env.production
+node_modules/
+.next/
+
 /app/generated/prisma
+
+
